# aligned_alloc.rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
src/: lib.rs
