[package]
name = "aligned_alloc"
version = "0.1.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/jonas-schievink/aligned_alloc.rs"
documentation = "https://github.com/jonas-schievink/aligned_alloc.rs#api"
description = """
Provides cross-platform primitives for aligned memory allocation
"""

[dependencies]
libc = "0.2"
winapi = "0.2"
kernel32-sys = "0.2"
